--- a/ASP.netMVC_SATYAM/ASP.netMVC_SATYAM.csproj
+++ b/ASP.netMVC_SATYAM/ASP.netMVC_SATYAM.csproj
@@ -122,6 +122,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MyTestController.cs" />
+    <Compile Include="Controllers\PracticeViewController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -179,6 +180,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\MyTest\View.cshtml" />
+    <Content Include="Views\PracticeView\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
