Inline HTML Helper

--- a/ASP.netMVC_SATYAM/ASP.netMVC_SATYAM.csproj
+++ b/ASP.netMVC_SATYAM/ASP.netMVC_SATYAM.csproj
@@ -186,6 +186,7 @@
     <Content Include="Views\PracticeView\Index.cshtml" />
     <Content Include="Views\Cars\Index.cshtml" />
     <Content Include="Views\Student\Register.cshtml" />
+    <Content Include="Views\PracticeView\InlineHtmlHelper.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
