--- a/ASP.netMVC_SATYAM/ASP.netMVC_SATYAM.csproj
+++ b/ASP.netMVC_SATYAM/ASP.netMVC_SATYAM.csproj
@@ -120,6 +120,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ActionResultsController.cs" />
     <Compile Include="Controllers\CarsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MyTestController.cs" />
@@ -157,6 +158,7 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\Redhat.PDF" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -187,6 +189,8 @@
     <Content Include="Views\Cars\Index.cshtml" />
     <Content Include="Views\Student\Register.cshtml" />
     <Content Include="Views\PracticeView\InlineHtmlHelper.cshtml" />
+    <Content Include="Views\ActionResults\Index.cshtml" />
+    <Content Include="Views\ActionResults\ForView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
